js/js.translator/testData/incremental/invalidation/constValChangeThroughDependency/lib1/l1.0.kt
package sample

const val answer: Int = 0
